[tool.poetry]
name = "auraboros"
version = "0.1.0"
description = ""
authors = ["Eleven-junichi2"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
pygame = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.8.0"
autopep8 = "^2.0.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
